syntax = "proto3";
package pocket.shared;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "pocket/shared/params.proto";

option go_package = "github.com/pokt-network/poktroll/x/shared/types";
option (gogoproto.stable_marshaler_all) = true;

// GenesisState defines the shared module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // params_history contains historical params snapshots for height-based lookups.
  repeated ParamsUpdate params_history = 2 [(gogoproto.nullable) = false];
}
